--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,21 @@
 {
     "manifest_version":3,
-    "name":"WhatsApp Interaction Suite",
-    "version":"1.0",
-    "description":"Enhance your WhatsApp web experience with advanced interaction features.",
+    "name":"WhatsApp Web Bridge",
+    "version":"3.0",
+    "description": "Seamlessly integrate WhatsApp messaging into web applications. Send messages from your web apps directly to WhatsApp Web.",
     "permissions":[
         "tabs",
-        "activeTab",
         "scripting"
     ],
+    "icons": {
+        "128": "icon-128.png"
+    },
     "background":{
         "service_worker":"src/background.js",
         "type":"module"
+    },
+    "action": {
+        "default_popup": "popup.html"
     },
     "content_scripts": [
         {
@@ -36,13 +41,6 @@
         "resources": ["src/moduleraid.js", "src/util/whatsapp.js"],
         "matches": ["https://web.whatsapp.com/*"]
     }],
-    "host_permissions": [
-        "http://*/*",
-        "https://*/*"
-      ],
-    "action": {
-        "default_popup": "popup.html"
-    },
     "externally_connectable": {
         "matches": ["http://localhost/"]
     }
