--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,8 @@
     "version":"3.0.5",
     "description": "Seamlessly integrate WhatsApp messaging into web applications. Send messages from your web apps directly to WhatsApp Web.",
     "permissions":[
-        "tabs"
+        "tabs",
+        "scripting"
     ],
     "icons": {
         "128": "icon-128.png"
@@ -13,6 +14,9 @@
         "service_worker":"src/background.js",
         "type":"module"
     },
+    "host_permissions": [
+        "https://web.whatsapp.com/*"
+    ],
     "action": {
         "default_popup": "popup.html"
     },
