--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version":3,
     "name":"WA Web Bridge",
-    "version":"3.0.5",
+    "version":"3.0.6",
     "description": "Seamlessly integrate WhatsApp messaging into web applications. Send messages from your web apps directly to WhatsApp Web.",
     "permissions":[
         "tabs"
@@ -28,7 +28,7 @@
         },
         {
             "matches": ["https://web.whatsapp.com/*"],
-            "js": ["src/moduleraid.js", "src/util/whatsapp.js"],
+            "js": ["src/moduleraid.js", "src/util/whatsapp-store.js","src/util/whatsapp-upstream.js","src/util/whatsapp-overrides.js"],
             "world": "MAIN"
         },
         {
@@ -37,7 +37,7 @@
         }
     ],
     "web_accessible_resources": [{
-        "resources": ["src/moduleraid.js", "src/util/whatsapp.js"],
+        "resources": ["src/moduleraid.js", "src/util/whatsapp-store.js","src/util/whatsapp-upstream.js","src/util/whatsapp-overrides.js"],
         "matches": ["https://web.whatsapp.com/*"]
     }],
     "externally_connectable": {
